# GifLaboratory

./: build.gradle  readme-cn.md  readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: images.txt
app/src/main/cpp/: CMakeLists.txt  bitmap-native-lib.cpp  native-gif-lib.cpp
app/src/main/cpp/gif/: BufferReader.cpp  BufferReader.h  GifDecoder.cpp  GifDecoder.h  GifHeaderDecoder.cpp  GifHeaderDecoder.h
app/src/main/res/layout/: activity_bitmap_fill_test.xml  activity_byte_text_view.xml  activity_gif_detail.xml  activity_gif_list.xml  activity_gif_performance_test.xml  activity_gif_view.xml  activity_glide_gif_view.xml  activity_grid_layout.xml  activity_native_gif.xml  activity_native_texture_gif_view.xml  activity_texture_view_test.xml  gif_app_extension_layout.xml  gif_attribute_layout.xml  gif_color_layout.xml  gif_color_table_extension_layout.xml  gif_graphics_control_extension_layout.xml  gif_image_data_layout.xml  gif_image_inspector_layout.xml  gif_image_layout.xml  gif_logical_screen_descriptor_layout.xml  gif_terminator_layout.xml
app/src/main/res/values/: attrs.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
references/: Animation Basics -- IM v6 Examples.html  Examples and Tips; How to optimize.html  LZW and GIF explained.html  Ndk.md  What's In A GIF - Animation and Transparency.html  What's In A GIF - Bit by Byte.html  What's In A GIF - GIF Explorer.html  What's In A GIF - LZW Image Data-Complete code table.html  What's In A GIF - LZW Image Data.html  performanceTest.md
references/Examples and Tips; How to optimize_files/: donate.html
references/LZW and GIF explained_files/: analytics.js(1).download  donate.html
(+48 files in other folders)
